--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Tianyu Lu
-description: Computation Biology
+description: Computation and Biology
 meta_description: "Tianyu Lu, Computational Biology"
 
 markdown: kramdown
